--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
     <div class="ticket-number">
       TICKET NUMBER: <span id="ticketNumber">0123456789</span>
     </div>
+    <div style="text-align: center; font-size: 0.75rem; font-style: italic; margin-top: 1.5rem; color: #aaa;">
+    Made by <strong>Iayuba_SoftwareS</strong> X <strong>Fy Creatives</strong>
+  </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
