--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       TICKET NUMBER: <span id="ticketNumber">0123456789</span>
     </div>
     <div style="text-align: center; font-size: 0.75rem; font-style: italic; margin-top: 1.5rem; color: #aaa;">
-    Made by <strong>Iayuba_SoftwareS</strong> X <strong>Fy Creatives</strong>
+    Made by <strong>Iayuba_SoftwareS</strong> X <strong>AustinMoyo</strong> X <strong>Fy Creatives</strong>
   </div>
   </div>
 
